# linux-networking-project

./: .gitignore  CMakeLists.txt  README.md  do-build.sh
networking/: CMakeLists.txt
networking/include/networking/: client.h  i_client.h  i_publisher.h  i_server.h  i_socket_communicator.h  i_subscriber.h  notifier.h  publisher.h  server.h  socket_communicator.h  subscriber.h
networking/src/: client.cpp  cmd_types.h  notifier.cpp  publisher.cpp  server.cpp  socket_communicator.cpp  subscriber.cpp  utils.cpp  utils.h
networkingold/: CMakeLists.txt
networkingold/include/networking/: tcp_server.h  utils.h
networkingold/src/: tcp_server.cpp  utils.cpp
notifier-app/: CMakeLists.txt
notifier-app/src/: main.cpp
publisher-app/: CMakeLists.txt
publisher-app/src/: main.cpp
serializer/: CMakeLists.txt  Config.cmake.in
serializer/include/serializer/: serializer.h  types.h
serializer/unittests/: CMakeLists.txt  serializer_unittests.cpp
